--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nitro-json",
-  "version": "1.0.0",
+  "version": "0.0.2",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -9,7 +9,7 @@
   "author": "Angelo Girardi",
   "homepage": "https://github.com/angelo-hub/react-native-nitro-json",
   "description": "Nitro JSON parser for React Native",
-  "license": "ISC",
+  "license": "MIT",
   "packageManager": "pnpm@9.12.0+sha512.4abf725084d7bcbafbd728bfc7bee61f2f791f977fd87542b3579dcb23504d170d46337945e4c66485cd12d588a0c0e570ed9c477e7ccdd8507cf05f3f92eaca",
   "devDependencies": {
     "nitro-codegen": "^0.18.2"
